Replace a.newInstance() with a.getConstructor().newInstance() on line 457
Class.newInstance() was deprecated in Java 9. Replacing it with Class.getConstructor().newInstance() allows for compilation with Java 9 and above.